@@ -4,4 +4,3 @@ TODO
 1.1.x
 -----
 - Swap instruments with each other
-- Insert track to all blocks
